<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    android:background="@drawable/sharebord_background"
    android:clickable="true"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/my_live_share"
        android:textColor="@color/purple"
        android:textSize="15sp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/xz_background_gray"
        />
    <LinearLayout
        android:id="@+id/butter_login_icon_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/butter_wechat_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/bf_wechat_login_btn_text"
            android:gravity="center"
            android:drawablePadding="7dp"
            android:textSize="13sp"
            android:text="@string/weixin_share"
            android:drawableTop="@drawable/blue_login_wechat_btn"
             />

        <TextView
            android:id="@+id/butter_we_circle_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawablePadding="7dp"
            android:textSize="13sp"
            android:text="@string/friends_share"
            android:drawableTop="@drawable/butter_we_circle_btn" />
        <TextView
            android:id="@+id/butter_qq_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/bf_qq_login_btn_text"
            android:gravity="center"
            android:drawablePadding="7dp"
            android:textSize="13sp"
            android:text="@string/qq_share"
            android:drawableTop="@drawable/blue_login_qq_btn" />
        <TextView
            android:id="@+id/butter_qq_qzone_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawablePadding="7dp"
            android:textSize="13sp"
            android:text="@string/qzones_share"
            android:drawableTop="@drawable/butter_qq_qzone_btn" />
        <TextView
            android:id="@+id/butter_weibo_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/bf_weibo_login_btn_text"
            android:gravity="center"
            android:drawablePadding="7dp"
            android:textSize="13sp"
            android:text="@string/sina_share"
            android:drawableTop="@drawable/blue_login_weibo_btn" />

    </LinearLayout>
</LinearLayout>
</RelativeLayout>