<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_disturb_content"
    android:layout_width="55dp"
    android:layout_height="27dp"
    android:background="@mipmap/user_off">

    <ImageView
        android:id="@+id/user_disturb_btn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="2dip"
        android:layout_marginRight="2dip"
        android:background="@mipmap/user_btn_bg"
        android:contentDescription="@string/user_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_disturb_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user_off_btn"
            android:textColor="@color/font_gray_dark" />

        <TextView
            android:id="@+id/user_disturb_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user_on_btn" />
    </LinearLayout>
</RelativeLayout>
