<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="33dp"
        android:background="@color/background_blue_deep"
        android:gravity="center"
        android:text="@string/list_title"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tab_1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tab_2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tab_3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/cursor"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@mipmap/tab_selected_bg"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/tab_selected_bg"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/tab_selected_bg"
            android:visibility="invisible" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:background="@color/white"
        android:divider="#000"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

    <LinearLayout
        android:id="@+id/bottom_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bottom_play_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/home_great_icon"
            android:gravity="center"
            android:text="@string/bottom_gkzb"
            android:textColor="@color/font_gray_light"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/bottom_live_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/home_liveicon"
            android:gravity="center"
            android:text="@string/bottom_wlzb"
            android:textColor="@color/font_gray_light"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/bottom_user_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/home_blue_user_icon"
            android:gravity="center"
            android:text="@string/bottom_grzx"
            android:textColor="@color/font_gray_light"
            android:textSize="10sp" />
    </LinearLayout>
</LinearLayout>
